--- a/wpx-js-80.conf
+++ b/wpx-js-80.conf
@@ -20,7 +20,7 @@ server {
     #}
     #error_page 404 /404.html;
     location ^~ /www/gm/ {
-        proxy_pass http://www.gm-fitness.com/;
+        proxy_pass http://test.gm-fitness.com/;
         proxy_redirect     off;
     }
     location ~ \.php$ {
@@ -34,11 +34,22 @@ server {
     location ~ /\.(ht|svn|git) {
         deny all;
     }
-gzip on;
-gzip_min_length 1k;
-gzip_buffers 16 64k;
-gzip_http_version 1.1;
-gzip_comp_level 6;
-gzip_types text/plain application/x-javascript text/css application/xml;
+    location ~* (.*\.(jpg|gif|png))!/w/(.*)/h/(.*)$ {  
+        set $width   $3;  
+        set $height  $4;  
+        rewrite "(.*\.(jpg|gif|png))(.*)$" $1;  
+    }
+
+    location ~* (.*\.(jpg|gif|png))$ {  
+        proxy_pass              http://h5.gm-fitness.com;
+        image_filter resize $width $height;  
+    }
+
+   gzip on;
+   gzip_min_length 1k;
+   gzip_buffers 16 64k;
+   gzip_http_version 1.1;
+   gzip_comp_level 6;
+   gzip_types text/plain application/x-javascript text/css application/xml;
 gzip_vary on;
 }
