--- a/gmfitness-cms-test-80.conf
+++ b/gmfitness-cms-test-80.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
     client_max_body_size 128M;
-    server_name www.gm-fitness.com;
-    root        /opt/server/gmfitness-cms;
+    server_name test.gm-fitness.com;
+    root        /opt/server/gmfitness-cms-test;
     index       index.php index.html;
     
     access_log  /opt/log/access.log;
@@ -14,10 +14,10 @@ server {
     }
    
     location /wxnotify {
-                    proxy_pass http://www.gm-fitness.com/index.php?g=Restful&m=Vip&a=wxnotify;
+                    proxy_pass http://test.gm-fitness.com/index.php?g=Restful&m=Vip&a=wxnotify;
             }
     location /classreminder {
-                    proxy_pass http://www.gm-fitness.com/index.php?g=Restful&m=oauth&a=classReminder;
+                    proxy_pass http://test.gm-fitness.com/index.php?g=Restful&m=oauth&a=classReminder;
             }
     # uncomment to avoid processing of calls to non-existing static files by Yii
     #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
